# VoiceTyper

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE  README.md  TODOS.md  build.rs  config.toml.example  release.toml
.cargo/: config.toml
.github/workflows/: release.yml
installer/: voicetyper.iss
src/: audio.rs  config.rs  dictation.rs  hotkey.rs  inject.rs  main.rs  settings.rs  transcribe.rs  tray.rs
