[package]
name = "voicetyper"
version = "0.2.0"
edition = "2024"
publish = false # binary app, never goes to crates.io (cargo + cargo-release both honor this)

[dependencies]
arboard = { version = "3.6.1", default-features = false }
cpal = "0.17.3"
directories = "6.0.0"
eframe = { version = "0.34.2", default-features = false, features = ["glow", "default_fonts"] }
hound = "3.5.1"
reqwest = { version = "0.13.3", default-features = false, features = ["blocking", "multipart", "native-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
tao = "0.35.3"
toml = "1.1.2"
toml_edit = "0.25.11"
tray-icon = "0.24.0"
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_LibraryLoader"] }
